fix: update alignment styles for DatePopupField and mainMenu buttons