@@ -1,15 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>org.openjfx</groupId>
     <artifactId>sample</artifactId>
     <version>1.0.0</version>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
     <dependencies>
+        <!-- Dépendances JavaFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -20,35 +24,39 @@
             <artifactId>javafx-fxml</artifactId>
             <version>24</version>
         </dependency>
+
+        <!-- Dépendance Oracle JDBC -->
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc8</artifactId>
-            <version>19.3.0.0</version>
+            <version>19.8.0.0</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
+            <!-- Plugin Maven Compiler pour Java 11 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
-		<configuration>
-		    <archive>
-		    <manifest>
-			    <addClasspath>true</addClasspath>
-		    </manifest>
-		    </archive>
-                    <release>11</release>
+                <configuration>
+                    <!-- Retirer le flag release qui peut être problématique avec les modules -->
+                    <source>11</source>
+                    <target>11</target>
+                    <compilerArgs>
+                        <arg>--add-exports=java.base/sun.security.util=ALL-UNNAMED</arg> <!-- Exportation des classes nécessaires pour oraclepki -->
+                    </compilerArgs>
                 </configuration>
             </plugin>
+
+            <!-- Plugin JavaFX pour l'exécution -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.6</version>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running -->
-                        <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>org.views.App</mainClass>
@@ -58,5 +66,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
 </project>
+
+
